# robotics-hw3

algorithm/: BMI_server.py  CMakeLists.txt  algorithm_subscriber.py  battery_server.py  package.xml  print_subscriber.py
common_msgs/: CMakeLists.txt  package.xml
common_msgs/msg/: Random.msg
common_msgs/srv/: BATTERY.srv  BMI.srv
sensor/: BMI_client.py  BMI_publisher.py  CMakeLists.txt  add_publisher.py  battery_client.py  package.xml  sensor_publisher.py
topic_custom/: CMakeLists.txt  package.xml
topic_custom/msg/: TimePose.msg
topic_custom/script/: custom_publisher.py  custom_subscriber.py
